Add the ArticleDetail lambda & api endpoint
